<resources>
    <string name="app_name">자기야</string>
    <string name="app_update">market://details?id=</string>
    <string name="app_market_url">https://play.google.com/store/apps/details?id=com.dmonster.darling.honey</string>
    <string name="app_folder_name">/Honey</string>
    <string name="app_folder_name_shared">/HoneyShared</string>
    <string name="app_shared">공유하기</string>
    <string name="app_shared_female">https://play.google.com/store/apps/details?id=com.dmonster.darling.honey\n\n추천인
        회원번호 : %s
    </string>
    <string name="app_error">일시적인 오류가 발생하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="facebook_app_id">2267136000253752</string>
    <string name="fb_login_protocol_scheme">fb2267136000253752</string>
    <string name="banner_id">ca-app-pub-1643323183206572/2469256911</string>
    <string name="banner_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="rewardAd_id">ca-app-pub-1643323183206572/5359578900</string>
    <string name="rewardAd_id_test">ca-app-pub-3940256099942544/5224354917</string>
    <string name="interstitialAd_id">ca-app-pub-1643323183206572/6803570823</string>
    <string name="interstitialAd_id_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_channel_id">알림</string>
    <string name="app_phone_number">번호없음</string>
    <string name="dialog_title">선택하세요.</string>
    <string name="dialog_enter">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_register">등록</string>
    <string name="dialog_no">안함</string>
    <string name="utility_except_korean_regex">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%*()_-[]{}`~/.,^+=?\ 0123456789</string>
    <string name="utility_english_number_only_regex">abcdefghijklmnopqrstuvwxyz 0123456789</string>
    <string name="utility_korean_number_only_regex">^[ㄱ-ㅎ가-힣0-9]+$</string>
    <string name="utility_car_regex01">
        ^\d{2}[가|나|다|라|마|거|너|더|러|머|버|서|어|저|고|노|도|로|모|보|소|오|조|구|누|두|루|무|부|수|우|주|바|사|아|자|허|배|호|하\x20]\d{4}/*$
    </string>
    <string name="utility_car_regex02">
        ^[서울|부산|대구|인천|대전|광주|울산|제주|경기|강원|충남|전남|전북|경남|경북|세종]{2}\d{2}[가|나|다|라|마|거|너|더|러|머|버|서|어|저|고|노|도|로|모|보|소|오|조|구|누|두|루|무|부|수|우|주|바|사|아|자|허|배|호|하\x20]\d{4}$
    </string>
    <string name="utility_date_former">년생</string>
    <string name="utility_date_year">yyyy</string>
    <string name="utility_date_time_second">yyyy-MM-dd HH:mm:ss</string>
    <string name="utility_date_format_day">yyyy년 MM월 dd일</string>
    <string name="utility_time_minute_noon">hh:mm a</string>
    <string name="utility_time_second">hh:mm:ss</string>
    <string name="utility_time_format_minute">aa hh시 mm분</string>
    <string name="board_date">yyyy-MM-dd hh:mm:ss(E)</string>
    <string name="board_date_format">yy.MM.dd</string>
    <string name="msg_app_permission">앱 사용을 위해 권한 동의가 필요합니다.</string>
    <string name="msg_app_network_check">네트워크 상태를 확인해주세요.</string>
    <string name="msg_app_update">자기야 새 버전이 있습니다.\n업데이트 하시겠습니까?</string>
    <string name="msg_app_finish">종료 하시겠습니까?</string>
    <string name="msg_app_login">로그인 후 이용가능합니다.</string>
    <string name="msg_app_logout">로그아웃하시겠습니까?</string>
    <string name="msg_app_logout_complete">로그아웃되었습니다.</string>
    <string name="msg_app_withdrawal_complete">회원탈퇴 되었습니다.</string>
    <string name="msg_app_save_image_complete">저장되었습니다.</string>
    <string name="msg_app_save_image_failed">저장에 실패하였습니다.</string>
    <string name="msg_app_no_list">목록이 존재하지 않습니다.</string>
    <string name="msg_app_call">전화연결 하시겠습니까?</string>
    <string name="msg_app_select_delete">삭제하시겠습니까?</string>
    <string name="msg_error_id">아이디를 입력하세요.</string>
    <string name="msg_error_password">비밀번호를 입력하세요.</string>
    <string name="msg_error_password_check">비밀번호 확인을 입력하세요.</string>
    <string name="msg_error_password_discord">비밀번호가 일치하지 않습니다.</string>
    <string name="msg_error_email">이메일을 입력하세요.</string>
    <string name="msg_error_talk">대화명을 입력하세요.</string>
    <string name="msg_error_age">태어난 년도를 입력하세요.</string>
    <string name="msg_error_area_join">지역을 입력하세요.</string>
    <string name="msg_error_gender">성별을 선택하세요.</string>
    <string name="msg_error_agreement">이용약관에 동의해야합니다.</string>
    <string name="msg_error_personal">개인정보처리방침에 동의해야합니다.</string>
    <string name="msg_error_profile">님 프로필을 등록하세요!!\n\n프로필을 등록만 해도 자기야의 모든 기능을 무.제.한.무.료 이용가능합니다.</string>
    <string name="msg_error_phone_check">핸드폰 인증 후 이용 가능합니다.</string>
    <string name="msg_error_select">잘못 입력하셨습니다.</string>
    <string name="msg_ideal_type_age">나이를 선택하세요.</string>
    <string name="msg_ideal_type_area">지역을 선택하세요.</string>
    <string name="msg_ideal_type_height">키를 선택하세요.</string>
    <string name="msg_ideal_type_weight">몸무게를 선택하세요.</string>
    <string name="msg_ideal_type_style">스타일을 선택하세요.</string>
    <string name="msg_ideal_type_income">연봉을 선택하세요.</string>
    <string name="msg_ideal_type_education">학력을 선택하세요.</string>
    <string name="msg_ideal_type_religion">종교를 선택하세요.</string>
    <string name="msg_ideal_type_blood">혈액형을 선택하세요.</string>
    <string name="arrow">%s > %s</string>
    <string name="wave">%s ~ %s</string>
    <string name="comma_str01">%s,%s</string>
    <string name="comma_str02">%s,%s,%s</string>
    <string name="comma_str03">%s,%s,%s,%s</string>
    <string name="comma_int01">%d,%d</string>
    <string name="line_str">%s-%s-%s</string>
    <string name="bracket01">(%s)</string>
    <string name="bracket02">(%s/%s)</string>
    <string name="won">%d 원</string>
    <string name="age">%s세</string>
    <string name="birth">%s년생</string>
    <string name="age_birth">%s세 / %s년생</string>
    <string name="children">%s남 %s녀</string>
    <string name="children_male">%s남</string>
    <string name="children_female">%s녀</string>
    <string name="height">%s cm</string>
    <string name="height_unit">cm</string>
    <string name="weight">%s kg</string>
    <string name="weight_unit">kg</string>
    <string name="weight_unit_below">미만</string>
    <string name="weight_unit_above">이상</string>
    <string name="year">%s년</string>
    <string name="year_before">%s년 이전</string>
    <string name="msg_error_value_smaller">%s 보다 작게 입력하세요.</string>
    <string name="msg_error_value_bigger">%s 보다 크게 입력하세요.</string>
    <string name="msg_error_area">이미 선택된 지역을 선택하셨습니다.</string>
    <string name="msg_error_style">이미 선택된 스타일을 선택하셨습니다.</string>
    <string name="msg_error_picture">사진은 최대 10개까지 등록가능합니다.</string>
    <string name="msg_error_join_talk">대화명에는 6자이내의 한글과 숫자만 사용 가능합니다.</string>
    <string name="hint_login_id">아이디</string>
    <string name="hint_login_email">이메일</string>
    <string name="hint_login_password">비밀번호</string>
    <string name="hint_join_password">비밀번호</string>
    <string name="hint_join_password_check">비밀번호 확인</string>
    <string name="hint_join_talk">대화명 (6자이내의 한글과 숫자만 사용가능)</string>
    <string name="hint_join_birth_year">태어난 년도</string>
    <string name="hint_join_birth_month">월</string>
    <string name="hint_join_birth_day">일</string>
    <string name="hint_join_area">지역</string>
    <string name="hint_join_area_deatail">상세지역</string>
    <string name="hint_join_recommendation">추천인 회원번호</string>
    <string name="hint_join_phone">휴대폰 번호 입력</string>
    <string name="hint_join_social_talk">대화명(6자이내의 한글과 숫자)</string>
    <string name="social_login_kakao_title">카카오톡으로 가입하기</string>
    <string name="social_login_google_title">구글로 가입하기</string>
    <string name="social_login_facebook_title">페이스북으로 가입하기</string>
    <string name="social_login_naver_title">네이버로 가입하기</string>
    <string name="login_email_mark">\u0040</string>
    <string name="login_login">로그인</string>
    <string name="login_find_id">아이디 찾기</string>
    <string name="login_find_password">비밀번호 찾기</string>
    <string name="login_find_id_password">계정을 잃어버리셨나요? 아이디/ 비밀번호 찾기</string>
    <string name="login_kakao">카카오 로그인</string>
    <string name="login_naver">네이버 로그인</string>
    <string name="login_facebook">페이스북\n로그인</string>
    <string name="login_google">구글 로그인</string>
    <string name="login_join">무료회원가입</string>
    <string name="join_title">회원가입</string>
    <string name="join_use_id_initial">아이디 및 이메일을 입력하세요.</string>
    <string name="join_use_id">이미 사용중인 아이디입니다.</string>
    <string name="join_use_not_id">사용가능한 아이디입니다.</string>
    <string name="join_id_guide">가입 후 수정이 불가합니다. 정확히 입력해주세요.</string>
    <string name="join_password_guide">비밀번호는 4자 이상의 한글과 숫자만 사용 가능합니다.</string>
    <string name="join_talk_guide">※한글만 사용가능합니다.(5자이내)</string>
    <string name="join_male">남성</string>
    <string name="join_female">여성</string>
    <string name="join_agreement">이용약관 동의</string>
    <string name="join_personal">개인정보처리방침 동의</string>
    <string name="join_agreement_look">약관보기</string>
    <string name="join_personal_look">방침보기</string>
    <string name="join_cancel">취소</string>
    <string name="join_enter">가입하기</string>
    <string name="agreement_title">이용약관</string>
    <string name="personal_title">개인정보 처리방침</string>
    <string name="main_more_menu_service_center">고객센터</string>
    <string name="main_more_menu_invitation">친구초대</string>
    <string name="main_more_menu_alarm">알림설정</string>
    <string name="main_more_menu_inquiry">1:1 문의</string>
    <string name="main_more_menu_question">자주묻는질문</string>
    <string name="main_more_menu_use">이용방법</string>
    <string name="main_more_menu_block">차단회원</string>
    <string name="main_more_menu_block_friends">지인차단</string>
    <string name="main_more_menu_dormant">휴면설정</string>
    <string name="main_more_menu_withdrawal">회원탈퇴</string>
    <string name="main_more_menu_logout">로그아웃</string>
    <string name="main_more_menu_withdrawal_do">탈퇴하기</string>
    <string name="main_more_menu_my_info">기본정보</string>
    <string name="main_refresh">자동</string>
    <string name="main_jumpup_complete_title">점프업 완료!!</string>
    <string name="main_jumpup_complete">점프업을 완료했습니다! \n\n이제 다른 회원분들을 살펴보러 가실래요?</string>
    <string name="msg_main_dormant">계정 휴면 하시겠습니까?</string>
    <string name="msg_main_dormant_clear">계정 휴면상태입니다.\n계정 휴면을 해제하시겠습니까?</string>
    <string name="msg_main_dormant_complete">계정 휴면이 완료되었습니다.</string>
    <string name="msg_main_dormant_clear_complete">계정 휴면해제가 완료되었습니다.</string>
    <string name="msg_main_withdrawal">자기야를 탈퇴하시겠습니까?</string>
    <string name="msg_main_withdrawal_coin">잔여 코인 : %s</string>
    <string name="msg_main_withdrawal_dormant">정말 탈퇴하시겠습니까?\n휴면하시면 재로그인시 언제든 활동 가능합니다.</string>
    <string name="msg_main_withdrawal_reason">탈퇴사유</string>
    <string name="msg_main_withdrawal_select01">더 이상 필요 없어서</string>
    <string name="item_charge">충전하기</string>
    <string name="item_charge_coin_title">충전하기</string>
    <string name="item_charge_coin_vat">VAT 10%</string>
    <string name="item_charge_coin_select01">10,000코인</string>
    <string name="item_charge_coin_select02">30,000코인</string>
    <string name="item_charge_coin_select03">50,000코인</string>
    <string name="item_charge_coin_select04">100,000코인</string>
    <string name="item_charge_coin_select05">200,000코인</string>
    <string name="item_charge_coin_select06">300,000코인</string>
    <string name="item_charge_won_select01">11,000원</string>
    <string name="item_charge_won_select02">33,000원</string>
    <string name="item_charge_won_select03">55,000원</string>
    <string name="item_charge_won_select04">110,000원</string>
    <string name="item_charge_won_select05">220,000원</string>
    <string name="item_charge_won_select06">330,000원</string>
    <string name="item_charge_coin_use_title">충전방법</string>
    <string name="item_charge_coin_use">인앱결제</string>
    <string name="popup_notify_title">상대방을 신고하시겠습니까?</string>
    <string name="popup_notify_select01">허위 프로필</string>
    <string name="popup_notify_select02">욕설 및 음란 사진/글</string>
    <string name="popup_notify_select03">광고</string>
    <string name="popup_notify_select04">기타</string>
    <string name="dlg_notify_title">신고</string>
</resources>