<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".point.view.ItemMenu02Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            style="@style/NestedScrollViewTheme"
            android:layout_above="@+id/btn_frag_item_charge_payment"
            android:padding="@dimen/default_margin_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- 충전하기 -->
                    <TextView
                                style="@style/baseTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/item_charge_coin_title"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold"
                        tools:ignore="SpUsage" />

                    <!-- VAT 10% -->
                    <TextView
                                style="@style/baseTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/item_charge_coin_vat" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_margin_1dp"
                    android:layout_marginTop="@dimen/default_margin_5dp"
                    android:background="@color/color_main" />

                <!-- 10,000코인 -->
                <RelativeLayout
                    android:id="@+id/rl_frag_item_charge_coin01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_10dp"
                    android:background="@drawable/charge_coin_select"
                    android:padding="@dimen/default_margin_5dp">

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_coin01"
                        android:layout_width="@dimen/default_margin_90dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:gravity="right"
                        android:text="@string/item_charge_coin_select01"
                        android:textColor="@color/charge_select_text_color"
                        android:textSize="@dimen/text_large"
                        tools:ignore="SpUsage" />

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_price01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/item_charge_won_select01"
                        android:textColor="@color/select_text_color01"
                        android:textSize="@dimen/text_normal"
                        tools:ignore="SpUsage" />
                </RelativeLayout>

                <!-- 30,000코인 -->
                <RelativeLayout
                    android:id="@+id/rl_frag_item_charge_coin02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_10dp"
                    android:background="@drawable/charge_coin_select"
                    android:padding="@dimen/default_margin_5dp">

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_coin02"
                        android:layout_width="@dimen/default_margin_90dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:gravity="right"
                        android:text="@string/item_charge_coin_select02"
                        android:textColor="@color/charge_select_text_color"
                        android:textSize="@dimen/text_large"
                        tools:ignore="SpUsage" />

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_price02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/item_charge_won_select02"
                        android:textColor="@color/select_text_color01"
                        android:textSize="@dimen/text_normal"
                        tools:ignore="SpUsage" />
                </RelativeLayout>

                <!-- 50,000코인 -->
                <RelativeLayout
                    android:id="@+id/rl_frag_item_charge_coin03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_10dp"
                    android:background="@drawable/charge_coin_select"
                    android:padding="@dimen/default_margin_5dp">

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_coin03"
                        android:layout_width="@dimen/default_margin_90dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:gravity="right"
                        android:text="@string/item_charge_coin_select03"
                        android:textColor="@color/charge_select_text_color"
                        android:textSize="@dimen/text_large"
                        tools:ignore="SpUsage" />

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_price03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/item_charge_won_select03"
                        android:textColor="@color/select_text_color01"
                        android:textSize="@dimen/text_normal"
                        tools:ignore="SpUsage" />
                </RelativeLayout>

                <!-- 100,000코인 -->
                <RelativeLayout
                    android:id="@+id/rl_frag_item_charge_coin04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_10dp"
                    android:background="@drawable/charge_coin_select"
                    android:padding="@dimen/default_margin_5dp">

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_coin04"
                        android:layout_width="@dimen/default_margin_90dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:gravity="right"
                        android:text="@string/item_charge_coin_select04"
                        android:textColor="@color/charge_select_text_color"
                        android:textSize="@dimen/text_large"
                        tools:ignore="SpUsage" />

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_price04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/item_charge_won_select04"
                        android:textColor="@color/select_text_color01"
                        android:textSize="@dimen/text_normal"
                        tools:ignore="SpUsage" />
                </RelativeLayout>

                <!-- 200,000코인 -->
                <RelativeLayout
                    android:id="@+id/rl_frag_item_charge_coin05"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_10dp"
                    android:background="@drawable/charge_coin_select"
                    android:padding="@dimen/default_margin_5dp">

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_coin05"
                        android:layout_width="@dimen/default_margin_90dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:gravity="right"
                        android:text="@string/item_charge_coin_select05"
                        android:textColor="@color/charge_select_text_color"
                        android:textSize="@dimen/text_large"
                        tools:ignore="SpUsage" />

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_price05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/item_charge_won_select05"
                        android:textColor="@color/select_text_color01"
                        android:textSize="@dimen/text_normal"
                        tools:ignore="SpUsage" />
                </RelativeLayout>

                <!-- 300,000코인 -->
                <RelativeLayout
                    android:id="@+id/rl_frag_item_charge_coin06"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_10dp"
                    android:background="@drawable/charge_coin_select"
                    android:padding="@dimen/default_margin_5dp">

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_coin06"
                        android:layout_width="@dimen/default_margin_90dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:gravity="right"
                        android:text="@string/item_charge_coin_select06"
                        android:textColor="@color/charge_select_text_color"
                        android:textSize="@dimen/text_large"
                        tools:ignore="SpUsage" />

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:id="@+id/tv_frag_item_charge_price06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/item_charge_won_select06"
                        android:textColor="@color/select_text_color01"
                        android:textSize="@dimen/text_normal"
                        tools:ignore="SpUsage" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_25dp">

                    <!-- 충전방법 -->
                    <TextView
                                style="@style/baseTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/item_charge_coin_use_title"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold"
                        tools:ignore="SpUsage" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_margin_1dp"
                    android:layout_marginTop="@dimen/default_margin_5dp"
                    android:background="@color/color_main" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_margin_50dp"
                    android:layout_marginTop="@dimen/default_margin_10dp"
                    android:background="@drawable/join_btn"
                    android:paddingLeft="@dimen/default_margin_10dp"
                    android:paddingRight="@dimen/default_margin_10dp">

                    <TextView
                                style="@style/baseTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:text="@string/item_charge_coin_use"
                        android:textSize="@dimen/text_large"
                        tools:ignore="SpUsage" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/item_charge_arrow_img" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <!-- 수정완료 -->
        <Button
            android:id="@+id/btn_frag_item_charge_payment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_margin_50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_main"
            android:text="@string/item_charge"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_xxlarge"
            tools:ignore="SpUsage" />

        <!-- 프로그래스바 -->
        <LinearLayout
            android:id="@+id/ll_frag_item_charge_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="@dimen/progress_size"
                android:layout_height="@dimen/progress_size" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
